# noble_backend

./: .gitignore  Dockerfile  README.md  client.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
routes/: client.py  web_search.py
routes/MCP/: crawler.py  main.py
routes/doitr/: client.py  config.py
routes/utils/: OpenAI.py
